@@ -1,3 +1,8 @@
+L1VMgodata - (0.9.2)
+   NEW: "getv regex key" command to get a regex match of a key search string.
+
+-- Stefan Pietzonke <jay-t@gmx.net> Sat 13 Jul 22:07 +0200
+
 L1VMgodata - (0.9.1)
    Data base now tries to allocate space for more data if max data size is reached.
 
